# gniazdo-os

./: .gitignore  Cargo.toml  Makefile  link.ld  os-image  target.json
.cargo/: config
asm/: boot.asm  cpuid.asm  debug.asm  enter_long.asm  enter_protected.asm  gdt.asm  hello.asm  link.ld  load_second_stage.asm  long.asm  print.asm  protected.asm  protected_print.asm  real.asm  second_sector.asm  test.asm
boot/: boot_sector.asm  gdt.asm  print.asm  print_pm.asm  read_disk.asm  switch_to_pm.asm
drivers/: ports.c  video.c  video.h
kernel/: kernel.c
rust/: Cargo.toml
rust/src/: main.rs
